--- a/nfb_custom/config.json
+++ b/nfb_custom/config.json
@@ -12,6 +12,6 @@
   "devices": [],
   "options": {},
   "schema": {},
-  "scripts": {"start": "modprobe cp210x && echo 10c4 89fb > /sys/module/cp210x/drivers/usb-serial\:cp210x/new_id"},
+  "scripts": {"start": "modprobe cp210x && echo 10c4 89fb > /sys/module/cp210x/drivers/usb-serial\\:cp210x/new_id"},
   "image": "unconfigured/{arch}-addon-nfb_custom"
 }
