--- a/nfb_custom/config.json
+++ b/nfb_custom/config.json
@@ -9,7 +9,7 @@
   "host_network": "true",
   "privileged": ["SYS_ADMIN", "NET_ADMIN"],
   "map": [],
-  "devices": [],
+  "devices": ["/dev/mmcblk0p3:/dev/mmcblk0p3:rwm"],
   "options": {},
   "schema": {},
   "scripts": {"start": "modprobe cp210x && echo 10c4 89fb > /sys/module/cp210x/drivers/usb-serial\\:cp210x/new_id"},
