--- a/nfb_custom/config.json
+++ b/nfb_custom/config.json
@@ -10,8 +10,8 @@
   "privileged": ["SYS_ADMIN", "NET_ADMIN"],
   "map": [],
   "devices": ["/dev/mmcblk0p3:/dev/mmcblk0p3:rwm"],
-  "options": {},
-  "schema": {},
+  "options": {"USBID": "10c4 89fb"},
+  "schema": {"USBID": "str"},
   "scripts": {"start": "modprobe cp210x && echo 10c4 89fb > /sys/module/cp210x/drivers/usb-serial\\:cp210x/new_id"},
   "image": "unconfigured/{arch}-addon-nfb_custom"
 }
